# screentaker

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/screenshot/: mod.rs
src/ui/: mod.rs
