[package]
name = "screentaker"
version = "0.1.1"
edition = "2021"
authors = ["Cat"]
description = "Terminal app for creating screenshots and modifying in the future."
license = "MIT"
documentation = "https://github.com/Vova-max-png/screentaker"
repository = "https://github.com/Vova-max-png/screentaker"
categories = ["Command line utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
screenshots = "0.8.5"
termion = "2.0.1"
whoami = "1.4.1"